--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <main class="container">
             <div class="container__top">
                   <img src="./images/logo.svg" alt="" srcset="" class="logo-image">
-                  <p class="launching"> <span>We are launching </span><b>soon!</b> </p>
+                  <h1 class="launching"> <span>We are launching </span><b>soon!</b></h1>
                   <p>Subscribe and get notified</p>
 
                   <div class="container__top__email-info">
