--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
       <main class="container">
             <div class="container__top">
-                  <img src="./images/logo.svg" alt="" srcset="" class="logo-image">
+                  <img src="./images/logo.svg" alt="A ping logo" class="logo-image">
                   <h1 class="launching"> <span>We are launching </span><b>soon!</b></h1>
                   <p>Subscribe and get notified</p>
 
